--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 clap = { version = "4.0.29", features = ["derive"] }
 dunce = "1.0.3"
 num-format = "0.4.4"
+rayon = "1.7.0"
+walkdir = "2"
