--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0.29", features = ["derive"] }
 dunce = "1.0.3"
+itertools = "0.11.0"
 num-format = "0.4.4"
 rayon = "1.7.0"
 walkdir = "2"
