--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ chrono = "0.4"
 clap = { version = "4.4.8", features = ["derive"] }
 dunce = "1.0"
 itertools = "0.12"
-num-format = "0.4"
+num-format = { version = "0.4", features = ["with-system-locale"] }
+once_cell = "1.19.0"
 spinners = "4.1"
 walkdir = "2"
