--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+cached = { version = "0.46.1", features = ["proc_macro"] }
 chrono = "0.4"
 clap = { version = "4.4.8", features = ["derive"] }
 dunce = "1.0"
