--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ clap = { version = "4", features = ["derive"] }
 
 [dependencies]
 anyhow.workspace = true
-cached = { version = "0.51", features = ["proc_macro"] }
+cached = { version = "0.52", features = ["proc_macro"] }
 chrono = "0.4"
 clap.workspace = true
 clap_complete = { version = "4", optional = true }
@@ -33,6 +33,8 @@ num-format = { version = "0.4", features = ["with-system-locale"] }
 once_cell = "1.19"
 spinners = "4.1"
 walkdir = "2"
+# this updated and broke num-format so we need to manually add it here
+winapi = { version="0.3.9", features=["errhandlingapi"] }
 
 [build-dependencies]
 anyhow.workspace = true
