--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,9 +33,5 @@ num-format = { version = "0.4", features = ["with-system-locale"] }
 once_cell = "1.19"
 spinners = "4.1"
 walkdir = "2"
-
-[build-dependencies]
-anyhow.workspace = true
-clap.workspace = true
-clap_complete = "4"
-cli = { path = "cli" }
+# winapi's last update broke num-format, it requires this feature
+winapi = { version="0.3.9", features=["errhandlingapi"] }
